<resources>
    <string name="app_name">Oujda Shop</string>
    <string name="login">Se connecter</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="confirmPassword">Confirmation du mot de passe</string>
    <string name="newAccount">Créer un compte</string>
    <string name="register">S\'inscrire</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="alreadyHaveAccount"><u>J\'ai déjà un compte</u></string>
    <string name="rememberMe">Se souvenir de moi</string>
    <string name="emptyListCategory">Aucune catégorie disponible</string>
    <string name="emptyListProduct">Aucune produit disponible</string>
    <string name="emptyListFavorite">Aucune produit</string>
    <string name="add">Ajouter</string>
    <string name="profile">Profil</string>
    <string name="categoryName">Nom</string>
    <string name="categoryDesc">Description</string>
    <string name="cancel">Annuler</string>
    <string name="update">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="logout">Se déconnecter</string>
    <string name="updatePassword">Modifier mot de passe</string>
    <string name="currentPassword">Mot de passe actuel</string>
    <string name="newPassword">Nouveau mot de passe</string>
    <string name="confirmNewPassword">Confirmer le nouveau mot de passe</string>
    <string name="listCategories">Catégories</string>
    <string name="productName">Nom du produit</string>
    <string name="productPrice">Prix : 00.00 DH</string>
    <string name="addToFavorites">Ajouter aux favoris</string>
    <string name="favorites">Favoris</string>
    <string name="categoryImg">Image de catégorie</string>
    <string name="productImg">Image de produit</string>
    <string name="scanner">Scannée code QR</string>
</resources>